...
        <scene sceneID="VBS-Ts-hUi">
            <objects>
                <navigationController title="App" automaticallyAdjustsScrollViewInsets="NO" id="IXR-Mk-kYq" customClass="NavViewController" customModule="x5gon_mobile" customModuleProvider="target" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="mbv-fJ-8Zp">
...
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                    <state key="normal" title="Login" backgroundImage="square.fill" catalog="system">
                                        <color key="titleColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                    </state>
...
                                        <constraint firstAttribute="height" constant="48" id="WZj-nk-PD2"/>
                                    </constraints>
                                    <state key="normal" backgroundImage="cancel"/>
                                    <connections>
                                        <action selector="hideSearchView:" destination="ANr-Yc-KZ7" eventType="touchUpInside" id="c1v-LD-CFu"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hand.thumbsup" catalog="system" highlightedImage="hand.thumbsup.fill" translatesAutoresizingMaskIntoConstraints="NO" id="016-Rn-zZs">
                                                <rect key="frame" x="20" y="70" width="25" height="25.666666666666671"/>
                                                <constraints>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hand.thumbsdown" catalog="system" highlightedImage="hand.thumbsdown.fill" translatesAutoresizingMaskIntoConstraints="NO" id="FM6-uO-2GO">
                                                <rect key="frame" x="78.333333333333329" y="72.333333333333329" width="25" height="25.666666666666671"/>
                                                <constraints>
...
                                                    <constraint firstAttribute="width" constant="110" id="fTT-0m-khU"/>
                                                </constraints>
                                                <state key="normal" title="Sidebar" image="sidebar.right" catalog="system">
                                                    <color key="titleColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
                                                    <constraint firstAttribute="width" constant="102" id="0lB-ay-LDc"/>
                                                </constraints>
                                                <state key="normal" title="Bookmark" image="bookmark" catalog="system">
                                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
                                <constraint firstAttribute="width" constant="74" id="GAB-ut-tPL"/>
                            </constraints>
                            <state key="normal" title="Back" image="chevron.left" catalog="system">
                                <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            </state>
...
