...

    /// This is a `UITableView` that displays user information
    @IBOutlet var tableView: UITableView!
    /// This is a self-defined view called `UserHistoryView`, which is based on `UIView`
    @IBOutlet var historyView: UserHistoryView!
    /// This is a list of menu titles that is displayed in `UITableView`
    let menuTitles = ["History", "My Videos", "Watch Later", "Logout", "Bookmarks:"]
    /// Default number of items = 6, including user title
    let defaultItems = 6
    /// User information
    var user = MainController.user
    /// The offset of the last Content used to determine the scroll action
    var lastContentOffset: CGFloat = 0.0
...
